--- a/source/sass/helpers/common/standart.scss
+++ b/source/sass/helpers/common/standart.scss
@@ -7,7 +7,7 @@
   min-width: 270px;
   min-height: 100%;
   margin: 0 auto;
-  padding: 0 25px;
+  padding: 0 15px;
 
   @media (min-width: $sm) {
     max-width: 610px;
@@ -18,6 +18,22 @@
   }
 
   @media (min-width: $lg) {
-    max-width: 1130px;
+    max-width: 1250px;
+  }
+}
+
+.wrapper {
+  padding: 0 10px;
+
+  @media (min-width: $sm) {
+    padding: 0 25px;
+  }
+
+  @media (min-width: $md) {
+    padding: 0 35px;
+  }
+
+  @media (min-width: $lg) {
+    padding: 0 45px;
   }
 }
