--- a/source/sass/helpers/common/typography.scss
+++ b/source/sass/helpers/common/typography.scss
@@ -1,3 +1,11 @@
+.f-standart {
+  font-size: 12px;
+  color: $primary;
+  line-height: 24px;
+  font-weight: 400;
+  font-family: "Arial", sans-serif;
+}
+
 .f-basic {
   font-size: 16px;
   color: $primary;
@@ -14,13 +22,13 @@
 .f-basicText {
   font-size: 12px;
   color: $primary;
-  line-height: 18px;
+  line-height: 17.5px;
   font-weight: 400;
 
   @media (min-width: $md) {
     font-size: 16px;
     color: $primary;
-    line-height: 24px;
+    line-height: 23px;
   }
 }
 
