--- a/source/sass/sections/main-menu.scss
+++ b/source/sass/sections/main-menu.scss
@@ -2,7 +2,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 64px;
+  min-height: 65px;
+
+  &__wrapper {
+    padding: 0 10px;
+    margin-bottom: 10px;
+
+    @media (min-width: $lg) {
+      padding: 0 60px;
+      margin-bottom: 36px;
+    }
+  }
 
   @media (min-width: $lg) {
     padding-top: 80px;
